--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(SOURCE_FILES main.cpp db.cpp db.h dbinit.cpp dbinit.h musicmodel.cpp musicmodel.h
         player.cpp player.h playercontrols.cpp playercontrols.h playlistmodel.cpp playlistmodel.h
         videowidget.cpp videowidget.h
-        basemodel.cpp basemodel.h settingmodel.cpp settingmodel.h)
+        basemodel.cpp basemodel.h settingmodel.cpp settingmodel.h tools.h)
 
 find_package(Qt5Core REQUIRED)
 #find_package(Qt5Gui REQUIRED)
