--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,12 @@ set(CMAKE_CXX_STANDARD 11)
 set(SOURCE_FILES main.cpp db.cpp db.h dbinit.cpp dbinit.h musicmodel.cpp musicmodel.h
         player.cpp player.h playercontrols.cpp playercontrols.h playlistmodel.cpp playlistmodel.h
         videowidget.cpp videowidget.h
-        basemodel.cpp basemodel.h settingmodel.cpp settingmodel.h tools.h)
+        basemodel.cpp basemodel.h settingmodel.cpp settingmodel.h tools.h config.cpp config.h)
+
+set (CMAKE_PREFIX_PATH "E:/develop/Qt/5.11.1/mingw53_32")
+#set(Qt5Core_DIR "E:/develop/Qt/5.11.1/mingw53_32/lib/cmake/Qt5Core")
+#set(Qt5_DIR "E:/develop/Qt/5.11.1/mingw53_32/lib/cmake/Qt5")
+#set(QT_QMAKE_EXECUTABLE "E:/develop/Qt/5.11.1/mingw53_32/bin/qmake.exe")
 
 find_package(Qt5Core REQUIRED)
 #find_package(Qt5Gui REQUIRED)
