--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
-.idea/*
-.idea/misc.xml
-.idea/modules.xml
-.idea/TasteSongExplore02.iml
-.idea/workspace.xml
+.idea
 
 cmake-build-debug
-cmake-build-debug/*
 
 TasteSongExplore03.pro.user
