播放列表搜索：实现弹窗显示搜索结果
另外增加Enter键执行搜索快捷操作

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(TasteSongExplore03)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp db.cpp db.h dbinit.cpp dbinit.h musicmodel.cpp musicmodel.h
+set(SOURCE_FILES main.cpp db.cpp db.h dbinit.cpp dbinit.h musicmodel.cpp musicmodel.h lineedit.cpp lineedit.h
         player.cpp player.h playercontrols.cpp playercontrols.h playlistmodel.cpp playlistmodel.h
         videowidget.cpp videowidget.h
         basemodel.cpp basemodel.h settingmodel.cpp settingmodel.h tools.h tools.cpp config.cpp config.h)
